# Migrania-App

./: .env.example  .gitignore  .railwayignore  BDD.yml  README 9.29.50 p. m..md  README.md  nicxpacks.toml  package-lock.json  railways.json  requirements.txt  verify-setup.ps1  verify-setup.sh
.github/: CODEOWNERS  (+3 more)
backend/: .coveragerc  .flake8  .gitignore  .pylintrc  Procfile  behave.ini  docker-compose.sonar.yml  environment.py  pyproject.toml  requirements.txt  run_tests.bat  sonar-project.properties.example
backend/agendamiento_citas/: apps.py  repositories.py  serializers.py  services.py  urls.py  viewsets.py
backend/agendamiento_citas/features/: agendamiento_citas.feature  environment.py
backend/agendamiento_citas/migrations/: 0001_initial.py
backend/analiticas/: analisis_patrones_data_structures.py  apps.py  estadisticas_historial_service.py  estadisticas_serializers.py  estadisticas_service.py  models.py  permissions.py  repositories.py  serializers.py  services.py  urls.py  views.py
backend/analiticas/features/: analisis_patrones.feature  environment.py  estadistica_historial.feature  estadisticas_historial.feature
backend/evaluacion_diagnostico/: apps.py  autoevaluacion_midas_service.py  episodio_cefalea_service.py  models.py  permissions.py  repositories.py  serializers.py  urls.py  viewsets.py
backend/evaluacion_diagnostico/features/: autoevaluacion_midas.feature  bitacora_digital.feature  environment.py
backend/evaluacion_diagnostico/migrations/: 0001_initial.py  0002_pregunta_alter_episodiocefalea_anticonceptivos_and_more.py
backend/migraine_app/: settings.py  settings_ci.py  swagger_hooks.py  urls.py
backend/tratamiento/: apps.py  constants.py  medicamento_service.py  models.py  permissions.py  repositories.py  seguimiento_services.py  serializers.py  services.py  tratamiento_service.py  urls.py  viewsets.py
backend/tratamiento/docs/: aseguramiento_tratamiento.puml
backend/tratamiento/features/: aseguramiento_tratamiento.feature  enviroment.py  environment.py  (+1 more)
backend/usuarios/: admin.py  fake_repository.py  managers.py  models.py  permissions.py  repositories.py  serializers.py  services.py  test_repository.py  urls.py  views.py  viewsets.py
(+194 files in other folders)
